# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  README.md  check-all.sh  format.sh  pyproject.toml  quality-check.sh  test.sh
.github/workflows/: claude.yml
backend/: .coveragerc  .gitignore  ai_generator.py  app.py  config.py  health_check.py  pytest.ini  rag_system.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_ai_tool_integration.py  test_api_endpoints.py  test_config_validation.py  test_integration.py  test_rag_content_queries.py  test_rag_system.py  test_search_tools.py  test_search_tools_enhanced.py  test_system_diagnostics.py  test_vector_store.py
frontend/: index.html  script.js  style.css
